<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:gravity="center">


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <Button
                android:text="@string/action_start_foreground_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnStartForegroundService"/>
        <Button
                android:text="@string/action_stop_foreground_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnStopForegroundService"/>

        <Button
                android:text="@string/action_show_tasks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btnShowTasks"/>

        <Button
                android:id="@+id/btnCompressData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCompressDataClick"
                android:text="@string/action_compress_data" />
    </LinearLayout>

</RelativeLayout>